--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>default</title>
 </head>
+
 <body>
 
     <header>
@@ -20,5 +25,7 @@
     </footer>
     
 </body>
+
 <script type="module" src="assets/js/main.js"></script>
+
 </html>
